feat: Rebrand application to Almagharibia TV, updating app name, bundle identifier, version numbers, and all associated icons and splash screens.

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "tv.nafrica.app",
-  "appName": "North Africa TV",
+  "appId": "tv.almagharibia.mobile.news",
+  "appName": "Almagharibia TV - المغاربية",
   "webDir": "dist"
 }
